fix pre overflows

--- a/static/css/colors.css
+++ b/static/css/colors.css
@@ -2,11 +2,11 @@
 
 :root {
     --blue: #4a8ae4;
-    --pink: #ED71DB;
+    --pink: #ed71db;
     --magenta: #c438bd;
     --red: #c13041;
     --light-pink: #fa99cd;
-    --purple: #826FF2;
+    --purple: #826ff2;
     --cyan: #0093bc;
     --yellow: #ffcd61;
     --aqua: #56b6c2;
